src/test/deca/context/invalid/LE/doubledecMeth.deca
// Historique:
//    cree le 22/01/2022

class C1{
    int methode (int a) {

    }

    int methode (int a ) {
        
    }
}